<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary"
            android:id="@+id/constraintLayout">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/Theme.OneMind.AppBarOverlay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/appBarLayout">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="?actionBarSize"
                    android:padding="@dimen/appbar_padding"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
                android:layout_width="226dp"
                android:layout_height="89dp"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/primary_variant"
                app:cardBackgroundColor="@color/secondary_variant"
                app:cardCornerRadius="4dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintVertical_bias="0.038"
                android:id="@+id/CardView1">

            <TextView
                    android:text="@string/question_1"
                    android:layout_width="match_parent"
                    android:id="@+id/textView1"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp" />

            <Button
                    android:text="@string/button_no"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_gravity="bottom|start"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="38dp"
                    android:maxHeight="42dp" />

            <Button
                    android:text="@string/button_yes"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_thoughts_yes"
                    android:layout_gravity="bottom|end"
                    android:insetBottom="0dp"
                    android:insetTop="0dp"
                    app:iconPadding="8dp"
                    android:minHeight="38dp"
                    android:maxHeight="42dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="226dp"
                android:layout_height="89dp"
                android:background="@color/primary_variant"
                app:cardBackgroundColor="@color/secondary_variant"
                app:cardCornerRadius="4dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintTop_toBottomOf="@+id/CardView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                android:id="@+id/CardView2"
                android:padding="4dp"
                android:layout_margin="12dp">

            <TextView
                    android:text="@string/question_2"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:textSize="20sp" />

            <Button
                    android:text="@string/button_no"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="38dp"
                    android:maxHeight="42dp" />

            <Button
                    android:text="@string/button_yes"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:insetBottom="0dp"
                    android:insetTop="0dp"
                    app:iconPadding="8dp"
                    android:minHeight="38dp"
                    android:maxHeight="42dp"
                    android:id="@+id/btn_task_yes" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="226dp"
                android:layout_height="89dp"
                android:background="@color/primary_variant"
                app:cardBackgroundColor="@color/secondary_variant"
                app:cardCornerRadius="4dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintTop_toBottomOf="@+id/CardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                android:padding="4dp"
                android:layout_margin="12dp"
                android:id="@+id/CardView3"
                android:layout_marginTop="24dp">

            <TextView
                    android:text="@string/question_3"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp" />

            <Button
                    android:text="@string/button_no"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="38dp"
                    android:maxHeight="42dp" />

            <Button
                    android:text="@string/button_yes"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:insetBottom="0dp"
                    android:insetTop="0dp"
                    app:iconPadding="8dp"
                    android:minHeight="38dp"
                    android:maxHeight="42dp"
                    android:id="@+id/btn_mind_yes" />

        </androidx.cardview.widget.CardView>

        <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_submit_yes"
                app:layout_constraintEnd_toEndOf="@+id/CardView3"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/CardView3" />

        <Button
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_submit_no"
                app:layout_constraintTop_toBottomOf="@+id/CardView3"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/CardView3" />

        <ProgressBar
                style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
                android:layout_width="86dp"
                android:layout_height="84dp"
                app:layout_constraintStart_toEndOf="@+id/CardView1"
                app:layout_constraintBottom_toBottomOf="@+id/CardView1"
                app:layout_constraintTop_toTopOf="@+id/CardView1"
                android:id="@+id/goodThoughtsProgress"
                android:progressDrawable="@drawable/circular_shape"
                android:indeterminateTint="@color/secondary_variant"
                android:max="100"
                android:progress="100"
                android:indeterminate="false" />

        <ProgressBar
                style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
                android:layout_width="86dp"
                android:layout_height="84dp"
                app:layout_constraintStart_toEndOf="@+id/CardView2"
                app:layout_constraintBottom_toBottomOf="@+id/CardView2"
                app:layout_constraintTop_toTopOf="@+id/CardView2"
                android:id="@+id/onTaskProgress"
                app:layout_constraintVertical_bias="1.0"
                android:progressDrawable="@drawable/circular_shape"
                android:indeterminateTint="@color/secondary_variant"
                android:max="100"
                android:progress="100"
                android:indeterminate="false" />

        <ProgressBar
                style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
                android:layout_width="86dp"
                android:layout_height="84dp"
                app:layout_constraintStart_toEndOf="@+id/CardView3"
                app:layout_constraintBottom_toBottomOf="@+id/CardView3"
                app:layout_constraintTop_toTopOf="@+id/CardView3"
                android:id="@+id/wanderingMindProgress"
                app:layout_constraintVertical_bias="1.0"
                android:max="100"
                android:progress="100"
                android:indeterminate="false"
                android:indeterminateTint="@color/secondary_variant"
                android:progressDrawable="@drawable/circular_shape" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>